fixed about section mobile image

--- a/styles/about.css
+++ b/styles/about.css
@@ -121,3 +121,23 @@
 /* TABS STYLING ENDS */
 
 /*  */
+
+/* MEDIA QUERIES */
+@media (max-width: 425px) {
+  .about-section {
+    padding: 1rem 0;
+  }
+  .about-section p {
+    text-wrap: balance;
+    padding-bottom: 1rem;
+  }
+  .about-image {
+    padding: -2rem 0;
+    min-height: 40vh;
+    max-width: 100%;
+    background-image: url(../assets/billboard.jpg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+}
