--- a/styles/style.css
+++ b/styles/style.css
@@ -411,7 +411,7 @@ footer a {
     font-size: 1.8rem;
   }
   .what-we-do-section {
-    /* text-align: center; */
+    text-align: center;
   }
   .what-we-do-section p {
     padding-top: 1rem;
